--- a/XYZReader/src/main/res/drawable/back_with_background.xml
+++ b/XYZReader/src/main/res/drawable/back_with_background.xml
@@ -14,10 +14,11 @@
   limitations under the License.
   -->
 
-<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="#8fff">
-    <item android:id="@android:id/mask">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
         <shape android:shape="oval">
-            <solid android:color="#fff" />
+            <solid android:color="#11000000" />
         </shape>
     </item>
-</ripple>
+    <item android:drawable="@drawable/ic_arrow_back" />
+</layer-list>
