--- a/XYZReader/src/main/res/values-sw600dp/dimens.xml
+++ b/XYZReader/src/main/res/values-sw600dp/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
-    <!-- detail -->
-    <dimen name="detail_title_text_size">42sp</dimen>
-    <dimen name="detail_body_text_size">20sp</dimen>
-    <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.3</item>
+    <dimen name="app_bar_layout_height_detail">500dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
+    <dimen name="detail_body_max_width">700dp</dimen>
+    <integer name="list_column_count">3</integer>
+
 </resources>
