--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -2,10 +2,14 @@
     <!-- detail -->
     <dimen name="detail_title_text_size">32sp</dimen>
     <dimen name="detail_body_text_size">22sp</dimen>
-    <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.25</item>
+    <dimen name="detail_body_max_width">1000dp</dimen>
 
-    <dimen name="fab_elevation">2dp</dimen>
-    <dimen name="fab_press_translation_z">6dp</dimen>
-    <dimen name="fab_margin">24dp</dimen>
+    <dimen name="app_bar_layout_height">144dp</dimen>
+    <dimen name="app_bar_layout_height_detail">250dp</dimen>
+    <dimen name="fab_margin">12dp</dimen>
+
+    <dimen name="detail_text_padding">8dp</dimen>
+
+    <integer name="list_column_count">2</integer>
 
 </resources>
